# shopa-rust

./: Cargo.toml  Rocket.toml
src/: lib.rs  main.rs
src/api/: mod.rs
src/api/middleware/: mod.rs
src/api/routes/: lists.rs  login.rs  mod.rs  register.rs
src/api/routes/lists/: mod.rs
src/db/: lists.rs  mod.rs  users.rs
src/helpers/: mod.rs
src/helpers/password/: mod.rs
src/helpers/response/: errors.rs  mod.rs  success.rs
src/helpers/security/: mod.rs
src/helpers/types/: mod.rs
src/helpers/validators/: email.rs  mod.rs  mongo.rs  phone.rs  uuid.rs
src/models/: lists.rs  mod.rs  users.rs
