[package]
name = "shopa-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
mongodb = "2.1.0"
serde = "1.0.145"
regex = "1.6.0"
lazy_static = "1.4.0"

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]

[dependencies.uuid]
version = "1.2.1"
features = [
    "v4",                
    "fast-rng",          
    "macro-diagnostics", 
]